# Personalized-Desk-Companions

./: .env.example  .gitattributes  .gitignore  LICENSE  PROJECT_PLAN.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  backend.ts  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
assets/pet/: library.json
assets/pet/cute-dog/: avatar_manifest.json  generate-assets.mjs  validate-assets.mjs
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/avatars/: __init__.py  router.py  schemas.py  store.py
backend/app/companion/: __init__.py  router.py  schemas.py  store.py
backend/app/contracts/: __init__.py  interfaces.py
backend/tests/: test_health.py
backend/tests/avatars/: test_api.py  test_store.py
backend/tests/companion/: test_api.py  test_store.py
contracts/avatar/: avatar-manifest.schema.json
contracts/events/: event-envelope.schema.json  pet-interaction.schema.json
contracts/http/: companion-state.schema.json  error-response.schema.json  health-response.schema.json
contracts/skills/: skill-manifest.schema.json
docs/iterations/: ITERATION-00-toolchain-contracts.md  ITERATION-01-pet-mvp.md  ITERATION-01A-pet-polish-avatar-library.md  ITERATION-01B-hover-ui-blink-fix.md  README.md
scripts/: check_contracts.mjs  check_environment.ps1  check_frontend.mjs  generate_placeholder_icon.ps1  start_dev.ps1
(+8 files in other folders)
