[package]
name = "desktop-companion-agent"
version = "0.0.0"
description = "Windows desktop shell for Desktop Companion Agent"
authors = ["Desktop Companion Agent contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
